--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Quest3 - Test Lab.sln"
+    "dotnet.defaultSolution": "Quest3-Lab.sln"
 }
